# OpenInkBridge

./: .gitignore  LICENSE  README.md
.github/workflows/: android.yml
android/: README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: app.js  index.global.js  openinkbridge_core_bg.wasm
android/app/src/main/java/org/openinkbridge/sample/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/openinkbridge-sdk/: build.gradle
android/openinkbridge-sdk/src/main/: AndroidManifest.xml
android/openinkbridge-sdk/src/main/java/org/openinkbridge/sdk/: Adapters.kt  CoreBridge.kt  EpdAdapter.kt  EpdAdapterManager.kt  Models.kt  OpenInkBridgeOverlayCanvas.kt  OpenInkBridgeView.kt  OpenInkBridgeWebView.kt
core/: Cargo.toml
core/src/: lib.rs  models.rs
docs/: ANDROID_INTEGRATION.md  INDEX.md  LINUX_INTEGRATION.md  WEB_INTEGRATION.md
linux/: Cargo.toml  README.md
linux/src/: main.rs
web/: package-lock.json  package.json  tsconfig.json
web/example/: index.html
web/src/: bridge.ts  canvas.ts  global.ts  index.ts  react.tsx
