[package]
name = "openinkbridge-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
jni = { version = "0.21.1", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
android = ["dep:jni"]
